Sat Nov 12 13:24:25 USMST 2005  Yan Dai  <dai_y@ociweb.com>
        
        * tests/DCPS/BuiltInTopic/common.h:
         
          Resolved a warnings.
          
        * tests/DCPS/BuiltInTopic/main.cpp:
        * tests/DCPS/FooTest4/main.cpp:

          Work arround with the compilation errors on Solaris due to the 
          compiler can not resolve operator in a namespace.

Fri Nov 11 17:18:09 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        
          Fixed warnings on string (char*) initialization.

        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/FooTest3_0/PubDriver.h:

          Work arround with the compilation errors on Solaris due to the 
          compiler can not resolve operator in a namespace.

Fri Nov 11 14:58:33 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Qos_Helper.h:

          Restored previous version that uses the 
          EXTERN_OR_INLINE_HELPER_METHOD  macro, but changed the
          macro to be defined as ACE_INLINE instead of nothing if 
          __ACE_INLINE__ is defined.

Fri Nov 11 12:51:09 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:
        
          Fixed warnings on string (char*) initialization.
          
        * dds/DCPS/Qos_Helper.h:

          Used ACE_NAMESPACE_INLINE_FUNCTION for inline functions 
          declare to fix warnings on Solaris.
          
Fri Nov 11 11:06:19 USMST 2005  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest5/DataReaderListener.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Reader.cpp:
        * performance-tests/DCPS/SimpleE2ETest/Writer.cpp:

          Removed extra parenthesis in the "#if defined" statement.
          The should fix the compilation problem on Solaris builds.
          
Thu Nov 10 16:35:32 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Qos_Helper.h: