@@ -1,3 +1,11 @@
+Sun Nov 13 15:57:35 USMST 2005  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/DCPS/transport/framework/BuildChainVisitor.h:
+        * dds/DCPS/transport/framework/QueueRemoveVisitor.h:
+
+          Added using declaration to resolve the "hides virtual functions"
+          compilation warnings on Solaris.
+          
 Sat Nov 12 13:24:25 USMST 2005  Yan Dai  <dai_y@ociweb.com>
         
         * tests/DCPS/BuiltInTopic/common.h:
